--- a/Hospital/src/resources/dbResource.properties
+++ b/Hospital/src/resources/dbResource.properties
@@ -4,3 +4,4 @@ db.cloudConnectionString = jdbc:mysql://mysql42387-bega-htp6.mycloud.by/hospital
 db.username = root
 db.localPassword = Bega15326
 db.cloudPassword = LwkFL0H3Dv
+db.newProperty=property
